--- a/client/index.html
+++ b/client/index.html
@@ -1,31 +1,14 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html lang="en"></html>
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="/vite.svg" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React App</title>
+  <title>Vite + React</title>
 </head>
-
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
   <script type="module" src="/src/main.jsx"></script>
-
-  <h1>Google Maps API Test</h1>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIuxBMcKkqEuKFRKztTtkIWXX6gnt-Lf4&callback=initMap" async defer></script>
-  <script>
-    function initMap() {
-      var map = new google.maps.Map(document.getElementById("map"), {
-        center: { lat: -34.397, lng: 150.644 },
-        zoom: 8
-      });
-    }
-  </script>
-  <div id="map" style="height: 400px; width: 100%;"></div>
 </body>
 
 </html>
- -->
